tests/valid/bounds.turtle
resize 10, 10
move 100
right
move 100
down
move 100
left
move 100