tests/invalid/move_to_oob.turtle
resize 10, 10
move_to 100, 100